<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".WelcomePage1">

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/Description"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:scaleType="fitCenter"
        android:src="@raw/myself"
        android:layout_marginTop="152dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Welcome"
        android:textSize="16sp" />


    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:onClick="nextPage"
        android:textSize="16sp"
        android:text="@string/Next" />

</LinearLayout>